# RM2026

./: .gitignore  README.md  tracking.txt  部署文档.md
cmake_modules/: FindEigen.cmake  FindFLANN.cmake
docs/: HowToInstallPCL1.11.md
logs/livox_ros_driver2/: build.cmake.000.log.stderr
logs/point_lio/: build.cmake.000.log.stderr
logs/relocalization/: build.cmake.000.log.stderr
logs/segmentation/: build.cmake.000.log.stderr
logs/tracking/: build.cmake.000.log.stderr
src/Point-LIO-master/: CMakeLists.txt
src/Point-LIO-master/PCD/: 711.rviz
src/Point-LIO-master/config/: mid360.yaml
src/Point-LIO-master/launch/: mapping_mid360.launch
src/Point-LIO-master/rviz_cfg/: loam_livox.rviz
src/Point-LIO-master/src/: laserMapping.cpp  parameters.cpp  parameters.h
src/goal_distribute/: CMakeLists.txt  JSON_RULES_USAGE.md  JSON_SETUP.md  README.md  README_TESTING.md  package.xml
src/goal_distribute/config/: decision_rules.json
src/goal_distribute/docs/: JSON_RULES_USAGE.md  README.md  README_TESTING.md
src/goal_distribute/include/goal_distribute/: decision_engine.hpp  decision_rule_config.hpp  game_state.hpp  goal_manager.hpp
src/goal_distribute/launch/: decision_test.launch  sentry_decision.launch
src/goal_distribute/scripts/: decision_test_bridge.py  decision_test_frontend.html
src/goal_distribute/src/: decision_engine.cpp  decision_test_server.cpp  game_state.cpp  goal_manager.cpp  sentry_decision_node.cpp
src/goal_distribute/srv/: DecisionTest.srv
src/livox_laser_simulation/: CMakeLists.txt
src/livox_ros_driver2/: CMakeLists.txt
src/navigation/: CMakeLists.txt  package.xml
src/navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  move_base_params.yaml
src/navigation/config/rivz/: simu.rviz
src/navigation/doc/: readme.md
src/navigation/include/cubic_spline/: cubic_spline_ros.h
src/navigation/include/navigation/: controller.hpp  fieldoptimizer.hpp  pid.hpp  utility.hpp
src/navigation/launch/: controller.launch  map.launch  rviz.launch  simu_backup.launch  simu_navi.launch  static_tf.launch  tem.launch
src/navigation/map/: 47.pgm  47.yaml  505.pgm  505.yaml  505_1.pgm  505_1.yaml  505_new.pgm  505_new.yaml  505array.pgm  505array.yaml  5floor.pgm  5floor.yaml  RMUC_B.pgm  RMUC_B.yaml  RMUC_B_back.yaml  RMUC_R.pgm  RMUC_R.yaml  halfcourt.pgm  halfcourt.yaml  map711.pgm  map711.yaml  rmuc_2025.yaml  rmuc_2025_003.pgm  rmuc_2025_modified.pgm  rmuc_2025_rotated.pgm  rmuc_2025_test.pgm  rmul_2025.pgm  rmul_2025.yaml  simu.pgm  simu.yaml  simu1.pgm  simu1.yaml  wandou.pgm  wandou.yaml  wandou2.pgm  wandou2.yaml
src/navigation/src/: controller.cpp  costmap_clean.cpp  fieldoptimizer.cpp  pid.cpp
src/recovery/: CMakeLists.txt  README.md  custom_recovery.xml  package.xml
src/recovery/include/recovery/: find_freespace.hpp  goal_reset.hpp
src/recovery/include/util/: costmap_utils.hpp  freespace_finder.hpp
src/recovery/src/: find_freespace.cpp  goal_reset.cpp
src/relocalization/: CMakeLists.txt  README.md
src/relocalization/include/relocalization/: relocalization.hpp
src/relocalization/include/small_gicp/pcl/: pcl_point_traits.hpp
src/relocalization/launch/: relocalization.launch
src/relocalization/src/: relocalization.cpp
src/segmentation/: CMakeLists.txt  README.md  package.xml
src/segmentation/config/: extrinsic.yaml
src/segmentation/include/segmentation/: segmentation.hpp  utility.hpp
src/segmentation/launch/: obstacle_detect.launch
src/segmentation/src/: segmentation.cpp
src/sentry_simulation/: CMakeLists.txt  package.xml
src/sentry_simulation/config/: tf.yaml
src/sentry_simulation/launch/: buildmap_bag.launch  livox2rosmsg.launch  path2marker.launch  ros_bag.launch  start.launch  tworobot.launch  view_sentry.launch
src/sentry_simulation/mesh/: rmul_2025.dae  rmul_2025.stp
src/sentry_simulation/src/: auto_obstacle.py  key_control.cpp  launch_controller.py  livox2rosmsg.cpp  path2marker.cpp  vehicle_simulator.cpp
src/sentry_simulation/urdf/: imu.urdf.xacro  livox_mid360.urdf.xacro  obstacle.urdf.xacro  sentry_base.urdf.xacro
src/sentry_simulation/world/: RMUC2024.world
src/tracking/: CMakeLists.txt  README.md  package.xml
src/tracking/include/tracking/: gimbal_serial.hpp  tracking.hpp
src/tracking/launch/: serial.launch  tracking.launch
src/tracking/src/: serial.cpp  tracking.cpp
